# ai-support-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: graph.py  prompts.py  rag.py  tools.py
app/api/: deps.py
app/api/routes/: appointments.py  faq.py  services.py
app/bot/: handlers.py  middlewares.py
app/db/: models.py  session.py
app/schemas/: appointment.py  service.py
app/services/: availability.py  booking.py
data/faq/: about.md  appointments.md  payment.md  warranty.md
migrations/: env.py
migrations/versions/: 2c3d0291581d_initial_schema.py
scripts/: ingest_faq.py  seed.py
tests/: conftest.py  test_api.py  test_availability.py  test_booking.py  test_tools.py
